# ai-lab

./: .gitignore  README.md  pyproject.toml  repos.txt
scripts/: bootstrap.sh
wiki/: SCHEMA.md  index.md  log.md  papers-reading-list.md
wiki/.obsidian/: community-plugins.json  workspace.json
wiki/comparisons/: embedding-models-2025.md  hybrid-vs-sparse-attention.md  open-source-llm-comparison.md  openclaw-vs-claude-code.md  quantization-methods.md  rag-approaches.md  rlhf-vs-dpo.md
wiki/concepts/: agent-context-gap.md  agent-feedback-loop.md  agent-loop-taor.md  agent-paradigm-shift.md  agent-product-design.md  agent-skills.md  chain-of-thought.md  claude-code-harness.md  claude-code-memory-system.md  claude-code-state-management.md  code-generation.md  colbert-retrieval.md  constitutional-ai.md  context-engineering.md  dense-passage-retrieval.md  dpo.md  flash-attention.md  graph-rag.md  hybrid-attention.md  in-context-learning.md  instruction-tuning.md  linear-attention.md  long-context-extension.md  lora.md  mcp-model-context-protocol.md  mixture-of-experts.md  model-quantization.md  react-agent.md  retrieval-augmented-generation.md  rlhf.md  scaling-laws.md  self-rag.md  sparse-attention.md  sparse-retrieval.md  swe-agent.md  test-time-compute.md  text-embedding.md  tool-use.md  tree-of-thoughts.md
wiki/entities/: alibaba-qwen.md  anthropic.md  baidu.md  bert.md  claude-code.md  clip.md  deepseek.md  gemma.md  glm.md  google-deepmind.md  gpt-3.md  gpt-4.md  llama.md  luo-fuli.md  mamba.md  meta-ai.md  microsoft-research.md  mimo-v2.md  mistral-7b.md  palm.md  (+8 more)
(+71 files in other folders)
